# AssetLens

./: .dockerignore  .gitignore  README.md  config_2d.yaml  config_3d.yaml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tsconfig.json
assetlens_core/: cli_3d.py
docs/: contracts.md
sample-data/: README.md  job.json
scripts/: demo_inference_curl.sh  make_poc_2d_dataset.py
services/inference/: Dockerfile  pyproject.toml
services/inference/src/assetlens_inference/: main.py  pipeline.py
services/inference/src/assetlens_inference.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/inference/src/inference_service/: main.py
services/inference/src/inference_service/api/routes/: jobs.py
services/inference/src/inference_service/core/: config.py  jsonl_logger.py  jsonutil.py  storage.py
services/inference/src/inference_service/jobs/: service.py
services/inference/src/inference_service/models/: schemas.py
services/inference/src/inference_service/pipeline/: aggregate.py  normalize.py  orchestrator.py  preprocess.py
services/inference/src/inference_service/pipeline/detectors/: base.py  mock.py
services/inference/tests/: conftest.py  test_determinism.py  test_determinism_sample_data.py  test_idempotent_run.py  test_schema_compliance.py  test_smoke.py  test_state_transitions.py
tests/: contracts.test.ts  test_assembly_graph_builder_deterministic.py  test_blender_dataset_smoke.py  test_bom_2d_written_and_deterministic.py  test_bom_3d_written_and_deterministic.py  test_bom_from_assembly_graph_counts.py  test_bom_schema_smoke.py  test_camera_generation_deterministic.py  test_cli_assetlens3d_bom_smoke.py  test_config_loads_yaml_to_pydantic.py  test_config_validation_no_images_found_fails_fast.py  test_dataset_generator_creates_images_and_labels.py  test_eval_metrics_smoke.py  test_eval_writes_details_jsonl.py  test_id_image_to_labels_conversion_synthetic.py  (+3 more)
(+62 files in other folders)
