[project]
name = "inference-monorepo"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  ".git",
  "data",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]
ignore = [
  "E501",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = [
  "services/inference/tests",
]
pythonpath = [
  "services/inference/src",
]

[tool.coverage.run]
omit = [
  "*/tests/*",
]
